--- a/css/styles.css
+++ b/css/styles.css
@@ -149,12 +149,21 @@ body {
 }
 /*-- Унікальний контент сторінки --*/
 /*-- Головна секція сайту --*/
+
 .hero {
+  display: block;
+  width: 1600px;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
+  margin: 0px auto;
 
-  background: #2f303a;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/hero/hero.jpg');
+  background-size: 1600px 600px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #c4c4c4;
 }
 
 .hero-title {
