--- a/css/styles.css
+++ b/css/styles.css
@@ -153,10 +153,10 @@ body {
 .hero {
   display: block;
   width: 1600px;
+  margin: 0px auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-  margin: 0px auto;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero/hero.jpg');
@@ -205,7 +205,7 @@ body {
   background-color: #188ce8;
 }
 
-/*-- Секція"Особенности" --*/
+/*---------- Секція"Особенности" -------*/
 .hidden-title {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -223,7 +223,18 @@ body {
 .features-items {
   width: calc((100% - 90px) / 4);
 }
+/*-- Іконки секції"Особенности" --*/
+.features-container {
+  display: flex;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f4fa;
+}
 
+/*-- Контент секції "Особенности" --*/
 .features-items .features-title {
   margin-bottom: 10px;
 
