--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ body {
   justify-content: space-between;
 }
 
-/*--Секція"Наша команда"--*/
+/*------Секція"Наша команда"------*/
 .team {
   background-color: #f5f4fa;
 }
@@ -313,10 +313,45 @@ body {
 }
 
 .profection {
-  padding-bottom: 30px;
+  margin-bottom: 16px;
 
   font-weight: inherit;
   color: var(--secondary-text-color);
+}
+/*--Список соціальних мереж в секції"Наша команда"--*/
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+.social-items {
+  width: 44px;
+  height: 44px;
+}
+.social-items:not(:last-child) {
+  margin-right: 10px;
+}
+.social-ref {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.social-icon {
+  fill: #afb1b8;
+}
+
+.social-ref:hover,
+.social-ref:focus {
+  background-color: var(--accent-color);
+}
+.social-ref .social-icon:hover,
+.social-ref .social-icon:focus {
+  fill: var(--primary-white-color);
 }
 
 /*------------Підвал------------*/
