--- a/css/styles.css
+++ b/css/styles.css
@@ -339,19 +339,59 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-}
-
-.social-icon {
   fill: #afb1b8;
 }
 
 .social-ref:hover,
 .social-ref:focus {
   background-color: var(--accent-color);
-}
-.social-ref .social-icon:hover,
-.social-ref .social-icon:focus {
   fill: var(--primary-white-color);
+}
+
+/*-----Секція"Постоянные клиенты"------*/
+
+.clients-title {
+  margin-bottom: 50px;
+
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.167;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.clients-list {
+  display: flex;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.clients-item {
+  margin-left: 30px;
+  margin-top: 30px;
+
+  width: 170px;
+  height: 92px;
+}
+
+/*---Список іконок в секції"Постоянные клиенты"----*/
+
+.clients-ref {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  fill: #afb1b8;
+
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.clients-ref:hover,
+.clients-ref:focus {
+  border-color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
 /*------------Підвал------------*/
